--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "to-do-list-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": " https://izabelak75.github.io/to-do-list-react/",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
