--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.4.2",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
